# ripopt

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASE_CHECKLIST.md  RIPOPT_VS_IPOPT.md  build.rs  narrative-history.org  ripopt.h
Ripopt.jl/: Project.toml
benchmarks/: BENCHMARK_REPORT.json  BENCHMARK_REPORT.md  BENCHMARK_REPORT_v0.8.1.json  BENCHMARK_REPORT_v0.8.1.md  BENCHMARK_REPORT_v0.8.2.json  Makefile  README.md  benchmark_report.py
benchmarks/cho/: cho_results.json  cho_results.jsonl
benchmarks/cutest/: README.md  cutest_ffi.rs  fortran_open_fixed.f90  prepare.sh  results.json  results.jsonl  results_v0.8.0-dev_T2.21fix.json  results_v0.8.0-dev_T2.27_stall_off.json  results_v0.8.0-dev_T2.28_loqo.json  results_v0.8.0-dev_T3.1_no_grad_divisor.json  results_v0.8.0-dev_T3.2_mu_max_fact.json  results_v0.8.0-dev_T3.3_theta_max_floor.json  results_v0.8.0-dev_T3.4_obj_max_inc.json  results_v0.8.0-dev_T3.5_alpha_min_plumb.json  results_v0.8.0-dev_post-A7.jsonl  results_v0.8.1.json  results_v0.8.2.json  run_cutest.rs  setup_cutest.sh
benchmarks/cutest/l1_rescue/: REPORT.md  off.jsonl  on.jsonl  problems.txt  regression_post_l1_flag_off.jsonl  regression_pre_l1.jsonl
benchmarks/electrolyte/: electrolyte_benchmark_report.md  electrolyte_results.json  electrolyte_results.jsonl  electrolyte_results_v0.8.1.json  electrolyte_results_v0.8.2.json
benchmarks/grid/: grid_benchmark_report.md  grid_results.json  grid_results.jsonl  grid_results_v0.8.2.json
benchmarks/hs/: hs_ipopt_native_results.json  hs_ripopt_results.json  hs_ripopt_results_v0.8.0-dev_T-MIT-D.json  hs_ripopt_results_v0.8.0-dev_T-MIT-G.json  hs_ripopt_results_v0.8.0-dev_T2.19.json  hs_ripopt_results_v0.8.0-dev_T3.9.json  hs_ripopt_results_v0.8.0.json  hs_ripopt_results_v0.8.0_rmumps.json  hs_ripopt_stderr_v0.8.0_rmumps.txt  run_ipopt_native.rs  run_ripopt.rs
benchmarks/large_scale/: large_scale_results.txt
benchmarks/lbfgs_scaling/: RESULTS.md  run.rs
benchmarks/lbfgs_scaling/results/: post_task4.jsonl  pre_task4.jsonl
benchmarks/mittelmann/: Makefile  run_solver.sh
benchmarks/preprocessing/: README.md  run_preprocessing_benchmark.py
cutest_suite/: cutest_problem.rs  run_cutest.rs
docs/: A8_FOLLOWUP_arki0003.md  GATE_AUDIT_v0.8.md  IPOPT_ALGORITHM_SPEC.md  IPOPT_DEVIATION_AUDIT.md  V0.8_DATA_LAYOUT_REFACTOR_PLAN.md  V0.8_IPM_IMPROVEMENT_PLAN.md  V0.8_IPOPT_ALIGNMENT_PLAN.md  diagnostics-guide.md
docs/src/: api-guide.md  benchmarks.md  diagnostics.md  introduction.md  options.md
examples/: autodiff_num_dual.rs  bc_audit.rs  benchmark.rs  benchmark_solvers.rs  c_api_test.c  c_example_with_options.c  c_hs035.c  c_rosenbrock.c  caching_new_x.rs  cho_benchmark.rs  compare_large_scale.rs  debug_hs071.rs  debug_hs071_v2.rs  debug_tp012.rs  debug_tp020.rs  debug_tp023.rs  debug_tp027.rs  debug_tp045.rs  debug_tp081.rs  debug_tp116.rs  debug_tp262.rs  debug_tp374.rs  debug_tp376.rs  electrolyte_benchmark.rs  grid_benchmark.rs  hs071.rs  issue28_probe.rs  issue_6_repro.rs  issue_7_repro.rs  lbfgs_hessian.rs  opf_benchmark.rs  qcnew_probe.rs  rosenbrock.rs  sensitivity.rs  sipopt_analytical.rs  tron_vs_ipm.rs
hs_suite/: generate.py
manuscript/: ripopt.bib  ripopt.org  supporting-information.org
pyomo-ripopt/: pyproject.toml
ripopt-py/: Cargo.toml  pyproject.toml
ripopt-py/examples/: max_time.ipynb
rmumps/: Cargo.toml
src/: augmented_lagrangian.rs  auxiliary_preprocessing.rs  bc_solver.rs  bound_layout.rs  c_api.rs  constraint_layout.rs  convergence.rs  d_bound_layout.rs  filter.rs  intermediate.rs  ipm.rs  iter0_dump.rs  kkt.rs  kkt_aug.rs  l1_penalty_barrier_nlp.rs  lbfgs.rs  lib.rs  linearity.rs  options.rs  preprocessing.rs  problem.rs  reduction_frame.rs  restoration.rs  restoration_nlp.rs  result.rs  sensitivity.rs  slack_formulation.rs  solution_report.rs  split_nlp.rs  sqp.rs
src/linear_solver/: feral_direct.rs  feral_hybrid.rs  feral_iterative.rs  low_rank_kkt.rs  mod.rs
src/nl/: autodiff.rs  mod.rs  parser.rs  problem_impl.rs  sol.rs
tests/: aug_kkt_path.rs  augmented_lagrangian.rs  c_api.rs  correctness.rs  electrolyte_thermo.rs  feral_solvers.rs  hs_problems_subset.rs  ipm_paths.rs  iterative_solvers.rs  l1_penalty_barrier.rs  l1_penalty_barrier_probe.rs  large_scale.rs  large_scale_benchmark.rs  lbfgs_ipm.rs  nl_integration.rs  sensitivity.rs
tests/common/: electrolyte_problems.rs  large_scale_problems.rs  opf_problems.rs
tests/fixtures/issue_10/: auxiliary_gate.nl
tests/fixtures/issue_23/: README.md  generate_incidence_nl.py  tutorial_flow_density.nl  tutorial_flow_density_perturbed.nl
