[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pyomo-ripopt"
version = "0.8.0"
description = "Pyomo solver plugin for the ripopt NLP solver"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "EPL-2.0"}
authors = [{name = "John Kitchin", email = "jkitchin@cmu.edu"}]
dependencies = ["pyomo>=6.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/jkitchin/ripopt"
Repository = "https://github.com/jkitchin/ripopt"
Issues = "https://github.com/jkitchin/ripopt/issues"

[project.entry-points."pyomo.solvers"]
ripopt = "pyomo_ripopt.ripopt_solver"

[tool.setuptools.packages.find]
include = ["pyomo_ripopt*"]

[tool.setuptools.package-data]
pyomo_ripopt = ["bin/*"]
