[package]
name = "ripopt-py"
version = "0.8.0"
edition = "2021"
license = "EPL-2.0"
description = "Python bindings for ripopt (interior-point NLP solver) with JAX autodiff"
repository = "https://github.com/jkitchin/ripopt"
publish = false

[lib]
name = "_ripopt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
ripopt = { path = ".." }
