[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "ripopt"
version = "0.8.2"
description = "Direct Python bindings for ripopt (interior-point NLP solver) with JAX autodiff"
readme = "README.md"
license = { text = "EPL-2.0" }
requires-python = ">=3.9"
authors = [{name = "John Kitchin", email = "jkitchin@cmu.edu"}]
dependencies = [
    "numpy>=1.23",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/jkitchin/ripopt"
Repository = "https://github.com/jkitchin/ripopt"
Issues = "https://github.com/jkitchin/ripopt/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.maturin]
module-name = "ripopt._ripopt"
python-source = "python"
features = ["pyo3/extension-module", "pyo3/abi3-py39"]
