[package]
name = "rmumps"
version = "0.1.2"
edition = "2021"
license = "CECILL-C"
description = "Pure Rust multifrontal sparse symmetric indefinite solver"
repository = "https://github.com/jkitchin/ripopt"
categories = ["mathematics", "algorithms"]
keywords = ["sparse", "ldlt", "multifrontal", "linear-algebra", "solver"]

[dependencies]
rayon = "1"
amd = "0.2"
faer = { version = "0.20", optional = true }

[features]
default = []

[dev-dependencies]
